--- a/Css/Car_Shop_main_Style.css
+++ b/Css/Car_Shop_main_Style.css
@@ -26,7 +26,7 @@ body {
 
 /* header */
 .hero {
-  background: url('/html/Image/png/header-image.png')no-repeat center center/cover;
+  background: url('../Image/png/header-image.png')no-repeat center center/cover;
   height: 100vh;
   position: relative;
   color: #fff;
@@ -262,7 +262,7 @@ body {
 }
 
 .service-container-2 {
-  background: url("/html/Image/png/set.png") no-repeat center center/cover;
+  background: url("../Image/png/set.png") no-repeat center center/cover;
   min-height: 700px;
   width: 100%;
   position: relative;
