--- a/Css/Car_Shop_main_Style.css
+++ b/Css/Car_Shop_main_Style.css
@@ -131,6 +131,16 @@ body {
   margin: 10px 0px;
 }
 
+#hamburger {
+  display: none;
+  padding: 0.1rem;
+  margin-left: 1rem;
+  font-size: 1.9rem;
+}
+
+ .menu {
+  position: relative;
+}
 .main-container {
   background-color: #282828;
   padding: 30px 0px;
