make navbar more responsive
- deleted navbar scrolled effect in CSS and JavaScript
- add z-index on .hero .content  btn to make the button under the collapsed menu
-

--- a/Css/Car_Shop_main_Style.css
+++ b/Css/Car_Shop_main_Style.css
@@ -57,6 +57,7 @@ body {
 
 .hero .content .btn {
   margin-top:75px;
+  z-index: 1;
 }
 
 .hero::before {
@@ -88,15 +89,6 @@ body {
   top: 0;
   padding: 0 30px;
   transition: 1s;
-}
-
-.navbar.scrolled {
-  background-color: #000 !important;
-  transition: background-color 200ms linear;
-}
-
-.navbar.top {
-  /* background: transparent; */
 }
 
 .navbar a {
