--- a/Css/Car_Shop_media_quiery.css
+++ b/Css/Car_Shop_media_quiery.css
@@ -39,7 +39,9 @@ li:nth-child(1) a:hover {
   flex-direction: column;
   align-items: center;
 }
-
+.hero .content h1,h2 {
+  z-index: 1;
+}
 .main-container .template-1 {
   margin-top: 15px;
   margin-bottom: 15px;
