--- a/Css/Car_Shop_media_quiery.css
+++ b/Css/Car_Shop_media_quiery.css
@@ -42,6 +42,9 @@ li:nth-child(1) a:hover {
 .hero .content h1,h2 {
   z-index: 1;
 }
+.navbar {
+  z-index: 3;
+}
 .main-container .template-1 {
   margin-top: 15px;
   margin-bottom: 15px;
